1. 廠商基本資料管理提供常數 2. 客戶基本資料管理提供付款條件(當月、次月的常數資料 3. 人員資料管理(user): 3-1.取得所有人員資料API回傳格式錯誤應為"output"非"User" 3-2.4.刪除API，UpdateUser、UpdateTime 參數錯誤 4. 發票資料新增發票類型
