# app/Http/Controllers/InvoiceInfoController.php
@@ -35,6 +35,13 @@ class InvoiceInfoController extends Controller
      *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
+     *         name="invoice_type",
+     *         in="query",
+     *         required=true,
+     *         description="發票類型",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
      *         name="track_code",
      *         in="query",
      *         required=true,
@@ -84,6 +91,7 @@ class InvoiceInfoController extends Controller
      *             @OA\Property(property="uuid", type="string", example="0b422f02-5acf-4bbb-bddf-4f6fdd843b08"),
      *             @OA\Property(property="period_start", type="string", example="2025-01"),
      *             @OA\Property(property="period_end", type="string", example="2025-02"),
+     *             @OA\Property(property="invoice_type", type="string", example="1"),
      *             @OA\Property(property="track_code", type="string", example="AQ"),
      *             @OA\Property(property="start_number", type="string", example="0000000001"),    
      *             @OA\Property(property="end_number", type="string", example="0000000050"),
@@ -109,6 +117,7 @@ class InvoiceInfoController extends Controller
             $validator = Validator::make($request->all(),[
                 'period_start' => 'required|string|max:7',
                 'period_end' => 'required|string|max:7',
+                'invoice_type' => 'required|string|max:2',
                 'track_code' => 'required|string|max:2',
                 'start_number' => 'required|string',
                 'end_number' => 'required|string',
@@ -171,6 +180,7 @@ class InvoiceInfoController extends Controller
             $InvoiceInfo = InvoiceInfo::create([
                 'period_start'     => $request['period_start'],
                 'period_end'     => $request['period_end'],
+                'invoice_type'     => $request['invoice_type'],
                 'track_code'   => $request['track_code'],
                 'start_number' => $request['start_number'],
                 'end_number'   => $request['end_number'],
@@ -235,6 +245,7 @@ class InvoiceInfoController extends Controller
      *             @OA\Property(property="uuid", type="string", example="0b422f02-5acf-4bbb-bddf-4f6fdd843b08"),
      *             @OA\Property(property="period_start", type="string", example="2025-01"),
      *             @OA\Property(property="period_end", type="string", example="2025-02"),
+     *             @OA\Property(property="invoice_type", type="string", example="1"),
      *             @OA\Property(property="track_code", type="string", example="AQ"),
      *             @OA\Property(property="start_number", type="string", example="0000000001"),    
      *             @OA\Property(property="end_number", type="string", example="0000000050"),
@@ -314,6 +325,7 @@ class InvoiceInfoController extends Controller
      *             @OA\Property(property="uuid", type="string", example="0b422f02-5acf-4bbb-bddf-4f6fdd843b08"),
      *             @OA\Property(property="period_start", type="string", example="2025-01"),
      *             @OA\Property(property="period_end", type="string", example="2025-02"),
+     *             @OA\Property(property="invoice_type", type="string", example="1"),
      *             @OA\Property(property="track_code", type="string", example="AQ"),
      *             @OA\Property(property="start_number", type="string", example="0000000001"),    
      *             @OA\Property(property="end_number", type="string", example="0000000050"),
@@ -390,6 +402,7 @@ class InvoiceInfoController extends Controller
      *             @OA\Property(property="uuid", type="string", example="0b422f02-5acf-4bbb-bddf-4f6fdd843b08"),
      *             @OA\Property(property="period_start", type="string", example="2025-01"),
      *             @OA\Property(property="period_end", type="string", example="2025-02"),
+     *             @OA\Property(property="invoice_type", type="string", example="1"),
      *             @OA\Property(property="track_code", type="string", example="AQ"),
      *             @OA\Property(property="start_number", type="string", example="0000000001"),    
      *             @OA\Property(property="end_number", type="string", example="0000000050"),
@@ -450,5 +463,66 @@ class InvoiceInfoController extends Controller
                 'error' => $e->getMessage() // 上線環境建議拿掉
             ], 500);
         } 
+    }
+    /**
+     * @OA\get(
+     *     path="/api/InvoiceInfo/showConst",
+     *     summary="列出所有發票字軌需要的常用(下拉、彈窗)",
+     *     description="列出所有發票字軌需要的常用(下拉、彈窗)",
+     *     operationId="Show_InvoiceInfo_ALL_Const",
+     *     tags={"Base_InvoiceInfo"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="成功"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="發票字軌需要的常用未找到"
+     *     )
+     * )
+     */
+    // 列出所有發票字軌需要的常用(下拉、彈窗)
+    public function showConst($constant='all'){
+        // 查詢 '發票類型' 的資料
+        $SysCode = SysCode::where('param_sn', '08')->get();
+        
+        try {
+            // 檢查是否有結果
+            if ($SysCode->isEmpty() ) {
+                return response()->json([
+                    'status' => false,
+                    'message' => '常用資料未找到',
+                    'InvoiceOption' => null
+                ], 404);
+            }
+    
+            // 返回查詢結果
+            return response()->json([
+                'status' => true,
+                'message' => 'success',
+                'InvoiceOption' => $SysCode
+            ], 200);
+    
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            // 捕捉驗證失敗，並返回錯誤訊息
+            return response()->json([
+                'status' => false,
+                'message' => '驗證錯誤',
+                'errors' => $e->errors()
+            ], 422);
+    
+        } catch (\Exception $e) {
+            // 其他例外處理，並紀錄錯誤訊息
+            Log::error('資料錯誤：' . $e->getMessage(), [
+                'exception' => $e,
+                'stack' => $e->getTraceAsString() // 可選，根據需要可增加更多上下文信息
+            ]);
+    
+            return response()->json([
+                'status' => false,
+                'message' => '伺服器發生錯誤，請稍後再試',
+                'error' => env('APP_DEBUG') ? $e->getMessage() : '請稍後再試'
+            ], 500);
+        }
     }
 }
